--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <!-- HEADER -->
     <header>
         <h1>Campo Minato</h1>
+        <!-- bottoni -->
         <div>
-            <select name="difficulty" id="difficulty">
+            <select name="difficulty" id="difficulty" class="buttons">
                 <option value="easy">easy</option>
                 <option value="medium">medium</option>
                 <option value="hard">hard</option>
             </select>
-            <input id="button" type="button" value="Play">
+            <input id="button" type="button" value="Play" class="buttons">
         </div>
     </header>
 
