implemento_punteggio_win-gameover_layover-gameover

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
                 <option value="medium">medium</option>
                 <option value="hard">hard</option>
             </select>
-            <input id="button" type="button" value="Play" class="buttons">
+            <input id="play" type="button" value="Play" class="buttons">
         </div>
     </header>
 
     <!-- MAIN -->
     <main>
+        <h2 id="score"></h2>
         <!-- container -->
-        <div id="container"></div>
+        <div id="container">
+        </div>
     </main>
     
 
