--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </main>
 
     <script type="text/javascript" src="js/fullscreen.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
